--- a/company_profile/templates/company_profile/location_category.html
+++ b/company_profile/templates/company_profile/location_category.html
@@ -10,9 +10,9 @@
     <div class="form-row add-category">
         
         <div class="input-group mb-2">
-          <div class="colorPickSelector" style='color:{{category.color}};background-color:{{cateogry.color}}'></div>
+          <div class="colorPickSelector" style='color:{{category.color}};background-color:{{category.color}}'></div>
           <div class="input-group-prepend col-8 pr-0 pl-2">
-              <input type="text" class="form-control category-name" style='border-top-right-radius:0px;border-bottom-right-radius:0px;' placeholder="Name of Category" value='{{category}}' required>
+              <input type="text" class="form-control category-name" style='border-top-right-radius:0px;border-bottom-right-radius:0px;' placeholder="Name of Category" value='{{category.category}}' required>
           </div>
           <div class="input-group-append">
               <span class="input-group-text delete" style='cursor:pointer;'>Delete</span>
@@ -25,7 +25,7 @@
         <div class="input-group mb-2">
           <div class="colorPickSelector" style='color:rgb(256, 256, 256);background-color:rgb(256, 256, 256);'></div>
           <div class="input-group-prepend col-8 pr-0 pl-2">
-              <input type="text" class="form-control category-name" style='border-top-right-radius:0px;border-bottom-right-radius:0px;' placeholder="Name of Category" value='{{category}}' required>
+              <input type="text" class="form-control category-name" style='border-top-right-radius:0px;border-bottom-right-radius:0px;' placeholder="Name of Category" value='{{category.category}}' required>
           </div>
           <div class="input-group-append">
               <span class="input-group-text delete" style='cursor:pointer;'>Delete</span>
