--- a/schedules/templates/schedules/create.html
+++ b/schedules/templates/schedules/create.html
@@ -35,9 +35,7 @@
       <div class='col-12 py-3 control-panel-header'>
         <span>TEMPLATE</span>
         
-        <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Options]</span>
-          <img class='ml-1' src='{% static "img/down-chevron.svg" %}' style='height:18px;margin-top:-2px;' alt="Plus Symbol" />
-        </a>
+        <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Options]</span></a>
         <button class='btn btn-dark float-right submit-template' type='submit'>Save</button>
         
       </div>
