--- a/schedules/templates/schedules/template_cp.html
+++ b/schedules/templates/schedules/template_cp.html
@@ -4,14 +4,43 @@
   <div class='control-panel-section'><span>Unselect Inactive Stands</span></div>
 </div>
 
+<!--<div class='row'>-->
+<!--{% for location, attributes in roster.items %}-->
+<!--  <div class='col-3 py-2'>-->
+<!--    <div class="form-check">-->
+<!--      <input class="form-check-input active-location" type="checkbox" value="" checked />-->
+<!--      <label class="form-check-label location" id='{{location}}' for="defaultCheck1">{{attributes.location}}</label>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--{% endfor %}-->
+<!--</div>-->
+
 <div class='row'>
-{% for location, attributes in roster.items %}
-  <div class='col-3 py-2'>
-    <div class="form-check">
-      <input class="form-check-input active-location" type="checkbox" value="" checked />
-      <label class="form-check-label location" id='{{location}}' for="defaultCheck1">{{attributes.location}}</label>
-    </div>
-  </div>
+{% for category, location in d.items %}
+<div class='col mx-1 px-0' style='color:white;background-color:{{location.secondary_color}};'>
+        
+
+      <div class='p-2 pl-0' style='background-color:{{location.color}};'>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" checked />
+          <label class="form-check-label" style='text-transform:uppercase; font-weight:700;'>{{category}}</label>
+        </div>
+      </div>
+        
+    
+  
+      {% for location_id, attributes in location.locations.items %}
+      <div class='p-2 pl-0'>
+        <div class="form-check">
+          <input class="form-check-input active-location" type="checkbox" value="" checked />
+          <label class="form-check-label location" id='{{location_id}}' for="defaultCheck1">{{attributes.location}}</label>
+        </div>
+      </div>
+      {% endfor %}
+
+</div>
+    
+  
 {% endfor %}
 </div>
 
