--- a/company_profile/templates/company_profile/location_category.html
+++ b/company_profile/templates/company_profile/location_category.html
@@ -12,7 +12,7 @@
         <div class="input-group mb-2">
           <div class="colorPickSelector" style='color:{{category.color}};background-color:{{category.color}}'></div>
           <div class="input-group-prepend col-8 pr-0 pl-2">
-              <input type="text" class="form-control category-name" style='border-top-right-radius:0px;border-bottom-right-radius:0px;' placeholder="Name of Category" value='{{category.category}}' required>
+              <input type="text" class="form-control category-name" style='border-top-right-radius:0px;border-bottom-right-radius:0px;' placeholder="Name of Category" value='{{category.category_name}}' required>
           </div>
           <div class="input-group-append">
               <span class="input-group-text delete" style='cursor:pointer;'>Delete</span>
