--- a/schedules/templates/schedules/create.html
+++ b/schedules/templates/schedules/create.html
@@ -3,10 +3,12 @@
 {% block content %}  
 <div class='container px-0'>
   <form class='template-form'>
-    <div class="container event-details">
-      <div class='col-12 py-4'>
-        <div class='event-header-details form-inline template-header'>
-            <div class='col-12'>
+    
+    <div class='roster-body' style='background:white;'>
+      <div class='col-12 py-3 control-panel-header'>
+        
+        
+        <div class='col-12'>
               {% with yesno_arg=title|add:',' %}
                 <input class="form-control template-name" type="text" id="{{schedule.pk}}" placeholder="Template Name" style='width:50%;' value='{{ title|yesno:yesno_arg }}' required {{title|yesno:'readonly,' }}>
               {% endwith %}
@@ -14,26 +16,16 @@
                 <button type="button" class="btn btn-dark ml-2 edit"><span>Edit</span></button><br />
               {% endif %}
           </div>
-          
             
-            {% if not new %}
-            <div class='col-12 pt-3'>
-            <a class='template-timestamps' style='font-size:1.2em;'>
-              Created at: {{schedule.created}}
-              {% if schedule.modified %}<br />Last modified: {{schedule.modified}} {% endif %}
-            </a>
-            </div>
-            {% endif %}
-            
-          
-          
-          
-        </div>
-      </div>
-    </div>
-    <div class='container roster-body' style='background:white;'>
-      <div class='col-12 py-3 control-panel-header'>
-        <span>TEMPLATE</span>
+          {% if not new %}
+          <div class='col-12 pt-3'>
+          <a class='template-timestamps' style='font-size:1.2em;'>
+            Created at: {{schedule.created}}
+            {% if schedule.modified %}<br />Last modified: {{schedule.modified}} {% endif %}
+          </a>
+          </div>
+          {% endif %}
+        
         
         <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Options]</span></a>
         <button class='btn btn-dark float-right submit-template' type='submit'>Save</button>
