--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -8,8 +8,8 @@
   <div class='container roster-body' style='background:white;'>
     <div class='col-12 py-3 control-panel-header'>
       <span>SCHEDULE</span>
-      <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Control Panel]</span>
-        <img class='ml-1' src='{% static "img/down-chevron.svg" %}' style='height:18px;margin-top:-2px;' alt="Plus Symbol" />
+      <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'>
+        <span>[Control Panel]</span>
       </a>
       <div class='btn btn-dark float-right submit-schedule'>Save</div>
     </div>
