--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -37,14 +37,7 @@
         <td>{{event.doors_open}}</td>
         <td class='text-center'>{% firstof event.schedule.scheduled '0' %}</td>
         <td class='text-center'>{% include 'base/boolean.html' with bool=event.alcohol %}</td>
-        <td class="text-center">
-          <button type="button" class="btn js-update-object" data-url="{% url 'event_update' event.id %}">
-            <img class='icon-edit 'src='{% static "img/edit.svg" %}' alt="Edit Icon"/>
-          </button>
-          <button type="button" class="btn js-delete-object" data-url="{% url 'event_delete' event.id %}">
-            <img class='icon-delete 'src='{% static "img/delete.svg" %}' alt="Delete Icon"/>
-          </button>
-        </td>
+        {% include 'objects/list_display/edit_delete.html' with obj=obj id=event.id %}
 
       </tr>
       {% empty %}
