--- a/locations/templates/locations/location_list.html
+++ b/locations/templates/locations/location_list.html
@@ -6,8 +6,9 @@
     <tr class='header'>
       <th onclick="sortTable(0)" scope="col"><a>ID</a></th>
       <th onclick="sortTable(1)" scope="col"><a>Name</a></th>
-      <th onclick="sortTable(2)" scope="col"><a>Bar</a></th>
-      <th onclick="sortTable(3)" scope="col"><a>Positions</a></th>
+      <th onclick="sortTable(2)" scope="col"><a>Category</a></th>
+      <th onclick="sortTable(4)" scope="col"><a>Positions</a></th>
+      <th onclick="sortTable(5)" scope="col"><a>Bar</a></th>
       <th scope="col">Edit</th>
     </tr>
   </thead>
@@ -17,16 +18,10 @@
     <tr>
       <td>{{location.location_id}}</td>
       <td>{{location.title}}</td>
-      <td>{% include 'base/boolean.html' with bool=location.bar %}</td>
+      <td>{{location.category}}</td>
       <td>{{location.positions_length}}</td>
-      <td>
-        <button type="button" class="btn js-update-object" data-url="{% url 'location_update' location.id %}">
-          <img class='icon-edit 'src='{% static "img/edit.svg" %}' alt="Edit Icon"/>
-        </button>
-        <button type="button" class="btn js-delete-object" data-url="{% url 'location_delete' location.id %}">
-          <img class='icon-delete 'src='{% static "img/delete.svg" %}' alt="Delete Icon"/>
-        </button>
-      </td>
+      <td>{% include 'base/boolean.html' with bool=location.bar %}</td>
+      {% include 'objects/list_display/edit_delete.html' with obj=obj id=location.id %}
     </tr>
   {% endfor %}
   </tbody>
