--- a/templates/objects/form.html
+++ b/templates/objects/form.html
@@ -22,7 +22,7 @@
       <option selected>Category...</option>
       {% for category in categories %}
         <!--add color-->
-        <option value="{{category.category}}">{{category.category}}</option>
+        <option value="{{category.category_name}}">{{category.category_name}}</option>
       {% endfor %}
     </select>
   </div>
