--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <nav class="navbar navbar-expand-lg navbar-dark background-container mb-0">
-  <div class="container">
+  <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img class='company-logo' src='{% static "img/logo.png" %}' alt="Company Logo"/></a>
     </a>
@@ -12,9 +12,9 @@
       <li class="nav-item"><a class="nav-link" href="/features/sms-text">SMS Text</a></li>
       <li class="nav-item"><a class="nav-link" href="/schedules/templates">Templates</a></li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <!--<form class="form-inline my-2 my-lg-0">-->
+    <!--  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+    <!--  <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>-->
+    <!--</form>-->
   </div>
 </nav>
