--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -4,64 +4,39 @@
 
 <div class='container-fluid' style='background:white;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
   {% include 'events/detail/header/event_header.html' with template=template %}
-  <div class='row px-4'>
-    <div class='col-2'>
-      <span>Employees:</span><br />
-      {% for employee in all_employees %}
-        {{employee.name}}<br />
-      {% endfor %}
+  
+<div class='row mx-4'>  
+  {% for category, employees in new_employees.items %}
+  <div class="board col" style='background:#f0f0f0;margin:0px;'>
+      <div class="board-column todo">
+        <!--<div class="board-column-header"></div>-->
+        
+          
+          <div class="board-column-content">
+            {% for employee in employees %}
+              <div class="board-item"><div class="board-item-content">{{employee.name}}</div></div>
+            {% endfor %}
+          </div>
+          
+        
+      </div>
     </div>
-    <div class='col-9'>
-    </div>
-  </div>
+  {% endfor %}
 </div>
-  
-  
-  
-  
 
-
+  
+  <!--<div class="board">-->
+  <!--  <div class="board-column todo">-->
+  <!--    <div class="board-column-header">Employees</div>-->
+  <!--    <div class="board-column-content">-->
+  <!--      {% for employee in all_employees %}-->
+  <!--        <div class="board-item"><div class="board-item-content">{{employee.name}}</div></div>-->
+  <!--      {% endfor %}-->
+  <!--    </div>-->
+  <!--  </div>-->
+  <!--</div>-->
+ 
+</div>
 {% endblock %}
 
- <!--<div class='container-fluid roster-body' style='background:white;'>-->
-  <!--  <div class='col-12 py-3 control-panel-header'>-->
-  <!--    <span>SCHEDULE</span>-->
-  <!--    <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'>-->
-  <!--      <span>[Control Panel]</span>-->
-  <!--    </a>-->
-  <!--    <div class='btn btn-dark float-right submit-schedule'>Save</div>-->
-  <!--  </div>-->
-  <!--<hr/>-->
-
-  <!--<div class='container-fluid px-0'>-->
-  <!--  <div class='card {{ first_save|yesno:"show,collapse" }}' id='collapseCP'>-->
-  <!--    <div class=' mx-3 mb-4'  style='background: #e8ebf1;'>-->
-  <!--      <div class='card-body'>-->
-  <!--        <div class='row'>-->
-  <!--            {% include './header/control_panel/update_template.html' %}-->
-  <!--            {% include './header/control_panel/update_roles.html' %}-->
-  <!--            {% include './header/control_panel/show_hide.html' %}-->
-  <!--        </div>-->
-  <!--      </div>-->
-  <!--    </div>-->
-  <!--    <hr/>-->
-  <!--  </div>-->
-  <!--</div>-->
   
-  <!--<div class='row mx-auto schedule-cards'>-->
-  <!--  {% if not first_save %}-->
-  <!--    <div class='col col-12'>-->
-  <!--      <div class='card-columns mx-4'>-->
-  <!--        {% for location, attributes in roster.items %}-->
-  <!--          {% if attributes.active %}-->
-  <!--            {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}-->
-  <!--              {% include 'events/detail/location_card.html' %}-->
-  <!--            {% endwith %}-->
-  <!--          {% endif %}-->
-  <!--        {% endfor %}-->
-  <!--      </div>-->
-  <!--      <hr />-->
-  <!--    </div>-->
-  <!--  {% endif %}-->
-  <!--</div>-->
-  <!--</div>-->
