--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -3,35 +3,33 @@
 {% block content %}  
 
 <div class='container-fluid' style='background:white;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
-  {% include 'events/detail/header/event_header.html' with template=template %}
-  <div class='board' style='width:100%'>
+{% include 'events/detail/header/event_header.html' with template=template %}
     
     
-    <div class='row'>
-      <div class='col-12'>
-        <div class='row row-height '>
-        
-        
-        <div class="col-2 mx-4 left" style='margin:0px; flex: 0 0 9%;display:inline-block;'>
-              <div class="board-column employee">
-                <!--<div class='board-column-header'>Employees:</div>-->
-                <div class="board-column-content employees">
-                  {% for employee in all_employees %}
-                    <div class="board-item"><div class="board-item-content">{{employee.name|truncatechars:20}}</div></div>
-                  {% endfor %}
-                </div>
-              </div>
-        </div>
-        
-        
-    
-    
-    
-      <div class='col-10' style='display:inline-block;'>
-        <div class='schedule-cards' style='height:100%;'>
+  <!--  <div class='board'>-->
+<!--<div class='row'>-->
+  <div class='board-column' style='width:10%;'>
+    <!--<div class='board-column-header'>Header!</div>-->
+    <div class="employee-column-content">
+      {% for employee in all_employees %}
+        <div class="employee-item"><div class="board-item-content">{{employee.name|truncatechars:20}}</div></div>
+      {% endfor %}
+    </div>
+  </div>
+
+  <!--    <div class='board-column' style='width:25%;'>-->
+  <!--      <div class='board-column-header'>Header!</div>-->
+  <!--      <div class="board-column-content employees">-->
+  <!--        {% for employee in all_employees %}-->
+  <!--          <div class="board-item"><div class="board-item-content">{{employee.name|truncatechars:20}}</div></div>-->
+  <!--        {% endfor %}-->
+  <!--      </div>-->
+  <!--    </div>-->
+  
+  <!--</div>-->
+  <div>
         {% if not first_save %}
-          <div class='col col-12' style='border-left: 1px #DDD solid;height:100%;'>
-            <div class='row' style='height:100%;'>
+        <div class='board' style='margin-left:12%;'>
               {% for location, attributes in roster.locations.items %}
                 {% if attributes.active %}
                   {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
@@ -39,20 +37,91 @@
                   {% endwith %}
                 {% endif %}
               {% endfor %}
-            <hr />
-            </div>
-          </div>
+        </div>
         {% endif %}
         </div>
-      </div> 
-      
-      
-      </div>
-    </div>
-    </div>
+<!--</div>-->
   </div>
-</div>
+  
+<!--  <div class='board'>-->
+      
+<!--      <div class='board-column' style='width:25%;'>-->
+<!--        <div class='board-column-header'>Header!</div>-->
+<!--        <div class="board-column-content employees">-->
+<!--          <div class="board-item"><div class="board-item-content">Item #1</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #2</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #3</div></div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class='board-column' style='width:25%;'>-->
+<!--        <div class='board-column-header'>Header!</div>-->
+<!--        <div class="board-column-content employees">-->
+<!--          <div class="board-item"><div class="board-item-content">Item #1</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #2</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #3</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #4</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #5</div></div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class='board-column' style='width:25%;'>-->
+<!--        <div class='board-column-header'>Header!</div>-->
+<!--        <div class="board-column-content employees">-->
+<!--          <div class="board-item"><div class="board-item-content">Item #1</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #2</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #3</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #4</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #5</div></div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class='board-column' style='width:25%;'>-->
+<!--        <div class='board-column-header'>Header!</div>-->
+<!--        <div class="board-column-content employees">-->
+<!--          <div class="board-item"><div class="board-item-content">Item #1</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #2</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #3</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #4</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #5</div></div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class='board-column' style='width:25%;'>-->
+<!--        <div class='board-column-header'>Header!</div>-->
+<!--        <div class="board-column-content employees">-->
+<!--          <div class="board-item"><div class="board-item-content">Item #1</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #2</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #3</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #4</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #5</div></div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class='board-column' style='width:25%;'>-->
+<!--        <div class='board-column-header'>Header!</div>-->
+<!--        <div class="board-column-content employees">-->
+<!--          <div class="board-item"><div class="board-item-content">Item #1</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #2</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #3</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #4</div></div>-->
+<!--          <div class="board-item"><div class="board-item-content">Item #5</div></div>-->
+<!--        </div>-->
+<!--      </div>-->
+
+  
+<!--  </div>-->
+      
+<!--</div>-->
 
 {% endblock %}
 
+
+    <!--<div class='col-8'>-->
+    <!--    {% if not first_save %}-->
+    <!--          {% for location, attributes in roster.locations.items %}-->
+    <!--            {% if attributes.active %}-->
+    <!--              {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}-->
+    <!--                {% include 'events/detail/new_location_card.html' %}-->
+    <!--              {% endwith %}-->
+    <!--            {% endif %}-->
+    <!--          {% endfor %}-->
+    <!--        <hr />-->
+    <!--    {% endif %}-->
+    <!--</div>-->
   
