--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -824,6 +824,7 @@ button:focus {
   /*border: 10px solid transparent;*/
   border: 3px solid transparent;
   /*min-height: 95px;*/
+  min-height:43px;
 }
 .board-item, .employee-item {
   position: absolute;
